// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not render Article Image display is not received 1`] = `
<View
  style={undefined}
>
  <View
    style={undefined}
  >
    <Image
      aspectRatio={1.7777777777777777}
      onLoad={[Function]}
      source={
        Object {
          "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F8c029716-97a2-11e7-8c3c-cb45202c3d59.jpg?crop=160%2C90%2C-0%2C-0",
        }
      }
      style={undefined}
    >
      <View
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flex": 1,
            },
            null,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "flex": 1,
              },
              undefined,
            ]
          }
        >
          <BVLinearGradient
            colors={
              Array [
                "#ededed",
                "#f9f9f9",
              ]
            }
            end={
              Object {
                "x": 1,
                "y": 0.25685517452260576,
              }
            }
            locations={
              Array [
                0,
                1,
              ]
            }
            start={
              Object {
                "x": 0,
                "y": 1,
              }
            }
            style={
              Array [
                Object {
                  "flex": 1,
                },
              ]
            }
          />
        </View>
      </View>
    </Image>
  </View>
  <View
    style={undefined}
  >
    <View>
      <View
        style={
          Array [
            Object {
              "paddingTop": 10,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#696969",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 13,
                "lineHeight": 17,
              },
              undefined,
            ]
          }
        >
          All the latest stories in culture and books.
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#696969",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 13,
                "lineHeight": 17,
              },
              Object {
                "color": "#333",
                "fontSize": 9,
                "fontWeight": "400",
                "letterSpacing": 1,
                "lineHeight": 17,
              },
              undefined,
            ]
          }
        >
          THE CREDITS
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`does not render Caption on Article Image if both caption and credits are not received 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
      "paddingBottom": 25,
      "width": "100%",
    }
  }
>
  <View
    style={undefined}
  >
    <Image
      aspectRatio={1.7777777777777777}
      onLoad={[Function]}
      source={
        Object {
          "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F8c029716-97a2-11e7-8c3c-cb45202c3d59.jpg?crop=160%2C90%2C-0%2C-0",
        }
      }
      style={undefined}
    >
      <View
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flex": 1,
            },
            null,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "flex": 1,
              },
              undefined,
            ]
          }
        >
          <BVLinearGradient
            colors={
              Array [
                "#ededed",
                "#f9f9f9",
              ]
            }
            end={
              Object {
                "x": 1,
                "y": 0.25685517452260576,
              }
            }
            locations={
              Array [
                0,
                1,
              ]
            }
            start={
              Object {
                "x": 0,
                "y": 1,
              }
            }
            style={
              Array [
                Object {
                  "flex": 1,
                },
              ]
            }
          />
        </View>
      </View>
    </Image>
  </View>
</View>
`;

exports[`renders inline image (landscape) correctly 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "flexWrap": "nowrap",
      "paddingBottom": 25,
      "paddingLeft": 10,
      "paddingRight": 10,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "width": "50%",
      }
    }
  >
    <Image
      aspectRatio={1.5}
      onLoad={[Function]}
      source={
        Object {
          "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F8c029716-97a2-11e7-8c3c-cb45202c3d59.jpg?crop=300%2C200%2C-0%2C-0",
        }
      }
      style={undefined}
    >
      <View
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flex": 1,
            },
            null,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "flex": 1,
              },
              undefined,
            ]
          }
        >
          <BVLinearGradient
            colors={
              Array [
                "#ededed",
                "#f9f9f9",
              ]
            }
            end={
              Object {
                "x": 1,
                "y": 0.25685517452260576,
              }
            }
            locations={
              Array [
                0,
                1,
              ]
            }
            start={
              Object {
                "x": 0,
                "y": 1,
              }
            }
            style={
              Array [
                Object {
                  "flex": 1,
                },
              ]
            }
          />
        </View>
      </View>
    </Image>
  </View>
  <View
    style={
      Object {
        "paddingLeft": 10,
        "paddingTop": 0,
        "width": "50%",
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "paddingTop": 10,
            },
            Object {
              "paddingTop": 0,
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#696969",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 13,
                "lineHeight": 17,
              },
              undefined,
            ]
          }
        >
          All the latest stories in culture and books.
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#696969",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 13,
                "lineHeight": 17,
              },
              Object {
                "color": "#333",
                "fontSize": 9,
                "fontWeight": "400",
                "letterSpacing": 1,
                "lineHeight": 17,
              },
              undefined,
            ]
          }
        >
          THE CREDITS
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders inline image (portrait) correctly 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "flexWrap": "nowrap",
      "paddingBottom": 25,
      "paddingLeft": 10,
      "paddingRight": 10,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "width": "50%",
      }
    }
  >
    <Image
      aspectRatio={0.6666666666666666}
      onLoad={[Function]}
      source={
        Object {
          "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F8c029716-97a2-11e7-8c3c-cb45202c3d59.jpg?crop=100%2C150%2C-0%2C-0",
        }
      }
      style={undefined}
    >
      <View
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flex": 1,
            },
            null,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "flex": 1,
              },
              undefined,
            ]
          }
        >
          <BVLinearGradient
            colors={
              Array [
                "#ededed",
                "#f9f9f9",
              ]
            }
            end={
              Object {
                "x": 1,
                "y": 0.25685517452260576,
              }
            }
            locations={
              Array [
                0,
                1,
              ]
            }
            start={
              Object {
                "x": 0,
                "y": 1,
              }
            }
            style={
              Array [
                Object {
                  "flex": 1,
                },
              ]
            }
          />
        </View>
      </View>
    </Image>
  </View>
  <View
    style={
      Object {
        "paddingLeft": 10,
        "paddingTop": 0,
        "width": "50%",
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "paddingTop": 10,
            },
            Object {
              "paddingTop": 0,
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#696969",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 13,
                "lineHeight": 17,
              },
              undefined,
            ]
          }
        >
          All the latest stories in culture and books.
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#696969",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 13,
                "lineHeight": 17,
              },
              Object {
                "color": "#333",
                "fontSize": 9,
                "fontWeight": "400",
                "letterSpacing": 1,
                "lineHeight": 17,
              },
              undefined,
            ]
          }
        >
          THE CREDITS
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders primary image correctly 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
      "paddingBottom": 25,
      "width": "100%",
    }
  }
>
  <View
    style={undefined}
  >
    <Image
      aspectRatio={1.7777777777777777}
      onLoad={[Function]}
      source={
        Object {
          "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F8c029716-97a2-11e7-8c3c-cb45202c3d59.jpg?crop=160%2C90%2C-0%2C-0",
        }
      }
      style={undefined}
    >
      <View
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flex": 1,
            },
            null,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "flex": 1,
              },
              undefined,
            ]
          }
        >
          <BVLinearGradient
            colors={
              Array [
                "#ededed",
                "#f9f9f9",
              ]
            }
            end={
              Object {
                "x": 1,
                "y": 0.25685517452260576,
              }
            }
            locations={
              Array [
                0,
                1,
              ]
            }
            start={
              Object {
                "x": 0,
                "y": 1,
              }
            }
            style={
              Array [
                Object {
                  "flex": 1,
                },
              ]
            }
          />
        </View>
      </View>
    </Image>
  </View>
  <View
    style={undefined}
  >
    <View>
      <View
        style={
          Array [
            Object {
              "paddingTop": 10,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#696969",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 13,
                "lineHeight": 17,
              },
              undefined,
            ]
          }
        >
          All the latest stories in culture and books.
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#696969",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 13,
                "lineHeight": 17,
              },
              Object {
                "color": "#333",
                "fontSize": 9,
                "fontWeight": "400",
                "letterSpacing": 1,
                "lineHeight": 17,
              },
              undefined,
            ]
          }
        >
          THE CREDITS
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders secondary image correctly 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "flexWrap": "nowrap",
      "paddingBottom": 25,
      "paddingLeft": 10,
      "paddingRight": 10,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "width": "50%",
      }
    }
  >
    <Image
      aspectRatio={1.5}
      onLoad={[Function]}
      source={
        Object {
          "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F8c029716-97a2-11e7-8c3c-cb45202c3d59.jpg?crop=600%2C400%2C-0%2C-0",
        }
      }
      style={undefined}
    >
      <View
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flex": 1,
            },
            null,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "flex": 1,
              },
              undefined,
            ]
          }
        >
          <BVLinearGradient
            colors={
              Array [
                "#ededed",
                "#f9f9f9",
              ]
            }
            end={
              Object {
                "x": 1,
                "y": 0.25685517452260576,
              }
            }
            locations={
              Array [
                0,
                1,
              ]
            }
            start={
              Object {
                "x": 0,
                "y": 1,
              }
            }
            style={
              Array [
                Object {
                  "flex": 1,
                },
              ]
            }
          />
        </View>
      </View>
    </Image>
  </View>
  <View
    style={
      Object {
        "paddingLeft": 10,
        "paddingTop": 0,
        "width": "50%",
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "paddingTop": 10,
            },
            Object {
              "paddingTop": 0,
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#696969",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 13,
                "lineHeight": 17,
              },
              undefined,
            ]
          }
        >
          All the latest stories in culture and books.
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#696969",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 13,
                "lineHeight": 17,
              },
              Object {
                "color": "#333",
                "fontSize": 9,
                "fontWeight": "400",
                "letterSpacing": 1,
                "lineHeight": 17,
              },
              undefined,
            ]
          }
        >
          THE CREDITS
        </Text>
      </View>
    </View>
  </View>
</View>
`;
